--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # --- Change what appears in the banner and meta data of your pages --- #
 title: IndiLingo Learning
-description: This is the tag-line of my website.
+description: Brand new language-learning Site for all India lovers alike!
 
 # --- Specify the language of site --- #
 lang: en
