--- a/_config.yml
+++ b/_config.yml
@@ -21,5 +21,5 @@ navbar-links:
   page1: Home
   page2: Festivals and Celebrations of India
   page3: Vocabulary 
-  page4: Indian Culture and Food
-  page5: Further exercises
+  page4: Indian tourism and Food
+  page5: Frequently asked Questions
